syntax = "proto3";
package cas.proto;

// 底盘车
message BotCar {
    repeated float move_sequence = 1;
    // 第一个元素为1或0，1表示先前进，0表示先旋转。接着为动作序列（前进时间,旋转角度），以旋转角度结束。
    // [1, 3, -90, 10, 0] 先前进
    // [0, 45, 10, -90]   先后退
}
